--- a/style.css
+++ b/style.css
@@ -74,3 +74,9 @@ div.jumbotron {
 div.questions {
   padding: 0 20px 0 20px;
 }
+
+div.questions h4 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
